# Project_3_Real-time_2-D_Object_Recognition

./: .gitignore  README.md  confusion_matrix.csv  confusion_matrix_cnn.csv
data/: confusion_matrix_cnn.csv  confusion_matrix_features.csv  objects_cnn_db.csv  objects_db.csv
include/: or2d.h  utilities.h
report/: report.txt
src/: CMakeLists.txt  CMakePresets.json  classification.cpp  evaluation.cpp  features.cpp  morphology.cpp  or2d.cpp  segmentation.cpp  threshold.cpp  training.cpp  unknown.cpp  utilities.cpp
src/gui/: or2d_gui.cpp
